--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -156,6 +156,16 @@ config TARGET_GARDENA_SMART_GATEWAY_AT91SAM
 	select BOARD_LATE_INIT
 	select SUPPORT_SPL
 
+config TARGET_GRIDPOINT_EC2K
+	bool "GridPoint EC2K board"
+	select BOARD_EARLY_INIT_F
+	select BOARD_LATE_INIT
+	select CPU_V7A
+	select SUPPORT_SPL
+	select SAMA5D2
+	help
+	  GridPoint EC2K board based on SAMA5D27_SOM1_EK
+
 config TARGET_SAM9X60EK
 	bool "SAM9X60-EK board"
 	select SAM9X60
@@ -339,6 +349,7 @@ source "board/calao/usb_a9263/Kconfig"
 source "board/egnite/ethernut5/Kconfig"
 source "board/esd/meesc/Kconfig"
 source "board/gardena/smart-gateway-at91sam/Kconfig"
+source "board/gridpoint/ec2k/Kconfig"
 source "board/l+g/vinco/Kconfig"
 source "board/ronetix/pm9261/Kconfig"
 source "board/ronetix/pm9263/Kconfig"
